--- a/pom.xml
+++ b/pom.xml
@@ -132,7 +132,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.7</version>
+			<version>4.10</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -189,6 +189,14 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<version>4.2.0.Final</version>
+		</dependency>
+
+		<!-- Groovy -->
+		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy-all</artifactId>
+			<version>1.8.6</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 	<build>
@@ -271,6 +279,7 @@
 				<version>2.0-SNAPSHOT</version>
 				<configuration>
 					<path>/</path>
+					<port>9000</port>
 				</configuration>
 				<executions>
 					<execution>
@@ -288,7 +297,6 @@
 						<phase>pre-integration-test</phase>
 						<configuration>
 							<contextFile>${project.build.directory}/${project.build.finalName}/WEB-INF/tomcat/context.xml</contextFile>
-							<port>9000</port>
 							<fork>true</fork>
 						</configuration>
 					</execution>
@@ -300,6 +308,21 @@
 						<phase>post-integration-test</phase>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<compilerId>groovy-eclipse-compiler</compilerId>
+					<verbose>true</verbose>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.codehaus.groovy</groupId>
+						<artifactId>groovy-eclipse-compiler</artifactId>
+						<version>2.6.0-01</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
