--- a/pom.xml
+++ b/pom.xml
@@ -183,6 +183,13 @@
 			<version>1.9.5</version>
 		</dependency>
 
+		<!-- Joda Time -->
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.1</version>
+		</dependency>
+
 		<!-- Validation -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
