--- a/pom.xml
+++ b/pom.xml
@@ -282,7 +282,7 @@
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
-				<version>2.0-SNAPSHOT</version>
+				<version>2.0</version>
 				<configuration>
 					<path>/</path>
 					<port>9000</port>
