--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,25 @@
 
 	<properties>
 		<java-version>1.6</java-version>
-		<org.springframework-version>3.1.1.RELEASE</org.springframework-version>
-		<org.aspectj-version>1.6.9</org.aspectj-version>
-		<org.slf4j-version>1.6.4</org.slf4j-version>
-		<shiro.version>1.2.1</shiro.version>
-		<spring-data-mongodb.version>1.0.2.RELEASE</spring-data-mongodb.version>
+		<org.springframework-version>3.2.4.RELEASE</org.springframework-version>
+		<org.aspectj-version>1.7.3</org.aspectj-version>
+        <cglib-version>2.2.2</cglib-version>
+		<org.slf4j-version>1.7.5</org.slf4j-version>
+		<shiro.version>1.2.2</shiro.version>
+		<spring-data-mongodb.version>1.2.0.RELEASE</spring-data-mongodb.version>
+        <junit-version>4.11</junit-version>
+        <httpclient-version>4.3</httpclient-version>
+        <log4j-version>1.2.17</log4j-version>
+
+        <servlet-api-version>2.5</servlet-api-version>
+        <jsp-api-version>2.1</jsp-api-version>
+        <jstl-version>1.2</jstl-version>
+        <commons-io-version>2.4</commons-io-version>
+        <jackson-mapper-asl-version>1.9.13</jackson-mapper-asl-version>
+        <joda-time-version>2.3</joda-time-version>
+        <hibernate-validator-version>5.0.1.Final</hibernate-validator-version>
+
+        <groovy-all-version>1.8.6</groovy-all-version>
 	</properties>
 
 	<dependencies>
@@ -51,7 +65,7 @@
         <dependency>
             <groupId>cglib</groupId>
             <artifactId>cglib-nodep</artifactId>
-            <version>2.2.2</version>
+            <version>${cglib-version}</version>
             <scope>runtime</scope>
         </dependency>
 
@@ -74,7 +88,7 @@
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.15</version>
+			<version>${log4j-version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>javax.mail</groupId>
@@ -107,38 +121,38 @@
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
-			<version>2.5</version>
+			<version>${servlet-api-version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet.jsp</groupId>
 			<artifactId>jsp-api</artifactId>
-			<version>2.1</version>
+			<version>${jsp-api-version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
-			<version>1.2</version>
+			<version>${jstl-version}</version>
 		</dependency>
 
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.10</version>
+			<version>${junit-version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.1.3</version>
+			<version>${httpclient-version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>2.1</version>
+			<version>${commons-io-version}</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -175,28 +189,28 @@
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
-			<version>1.9.5</version>
+			<version>${jackson-mapper-asl-version}</version>
 		</dependency>
 
 		<!-- Joda Time -->
 		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
-			<version>2.1</version>
+			<version>${joda-time-version}</version>
 		</dependency>
 
 		<!-- Validation -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>4.3.0.Final</version>
+			<version>${hibernate-validator-version}</version>
 		</dependency>
 
 		<!-- Groovy -->
 		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy-all</artifactId>
-			<version>1.8.6</version>
+			<version>${groovy-all-version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -291,7 +305,7 @@
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
-				<version>2.0</version>
+				<version>2.1</version>
 				<configuration>
 					<path>/</path>
 					<port>9000</port>
