Handle public and private folder. Change name of Eventweek to EventWeek.

--- a/src/main/resources/settings.properties
+++ b/src/main/resources/settings.properties
@@ -1,2 +1,2 @@
-rosette.baseUrl=http://localhost:9000
-rosette.baseUrlWithVersion=http://localhost:9000/api/v1-snapshot
+rosette.rosetteUrlWithVersion=http://localhost:9000/api/v1-snapshot
+rosette.cordateUrlWithVersion=http://localhost:9000/cordate/api/v1-snapshot
