Change the way event is created. Request shall now contain all resources. Server is no longer creating resources from the resourceType.

--- a/src/main/resources/settings.properties
+++ b/src/main/resources/settings.properties
@@ -1,2 +1,2 @@
-rosette.rosetteUrlWithVersion=http://localhost:9000/api/v1-snapshot
-rosette.cordateUrlWithVersion=http://localhost:9000/cordate/api/v1-snapshot
+rosette.baseUrl=http://localhost:9000
+rosette.apiVersion=v1-snapshot
