--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '1.3.0.M2'
+        springBootVersion = '1.3.0.RC1'
     }
     repositories {
         mavenCentral()
@@ -32,9 +32,6 @@ repositories {
     maven { url "https://repo.spring.io/snapshot" }
     maven { url "https://repo.spring.io/milestone" }
 }
-
-// TODO: Remove when Fixed - https://github.com/spring-projects/spring-boot/issues/3279
-ext['spring-data-releasetrain.version'] = 'Gosling-BUILD-SNAPSHOT'
 
 configurations {
     providedRuntime
