--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,7 @@ repositories {
 
 dependencies {
     compile("org.springframework.boot:spring-boot-devtools")
+    compile("org.springframework.boot:spring-boot-starter-logging")
     compile("org.springframework.boot:spring-boot-starter-mail")
     compile("org.springframework.boot:spring-boot-starter-web")
 	compile('org.springframework.boot:spring-boot-starter-security')
