--- a/src/main/resources/application-production.yml
+++ b/src/main/resources/application-production.yml
@@ -4,7 +4,11 @@ spring:
   profiles: production
 
 server:
-  port: 80
+  port: 80  # Will probably be ignored when deployed in Tomcat
+
+logging.level:
+  ROOT: ERROR
+  se.leafcoders.rosette: ERROR
 
 multipart:
   max-file-size: 200MB
@@ -33,7 +37,7 @@ spring.mail:
     # mail.smtp.socketFactory.port:
 
 rosette:
-  baseUrl: http://localhost:9000
+  baseUrl: http://localhost
   apiVersion: v1
   jwtSecretToken: tooShort # Don't change this. Override this property in production with environment variable
   defaultMailFrom: no-reply@localhost
