Enable passing rosette base url to Unit tests

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,14 @@ configurations {
     providedRuntime
 }
 
+test {
+    if (System.getProperty('rosette.baseUrl')) {
+        systemProperties = [
+            'rosette.baseUrl': System.getProperty('rosette.baseUrl')
+        ]
+    }
+}
+
 // Ignore 'test' task when running 'build' task
 test.onlyIf {
     !gradle.taskGraph.hasTask(build)
