Take back SpringBootStarterWeb. For some reason it's needed.

--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,7 @@ repositories {
 dependencies {
     compile("org.springframework.boot:spring-boot-devtools")
     compile("org.springframework.boot:spring-boot-starter-logging")
+    compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-mail")
 	compile('org.springframework.boot:spring-boot-starter-security')
     compile("org.springframework.boot:spring-boot-starter-data-mongodb")
