--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -7,6 +7,8 @@ spring:
 spring:
   profiles: development
 
+rosette:
+  uploadsPath: ./rosetteUploads
 
 spring.data.mongodb:
   database: rosette-test
