Fixes after merge

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,29 @@
-.DS_Store
-target
-.extract
-.settings
-.project
-.classpath
-rosette.iml
-Test.iml
-.idea
+/build/
+/rosetteFiles
 .gradle
-/build
-/bin
-/.apt_generated/
-/rosetteUploads
+!gradle/wrapper/gradle-wrapper.jar
+.DS_Store
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.metadata
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+/bin/
