--- a/src/main/resources/application-development.yml
+++ b/src/main/resources/application-development.yml
@@ -6,7 +6,7 @@ spring:
 server:
   port: 9000
 
-multipart:
+spring.http.multipart:
   max-file-size: 200MB
   max-request-size: 200MB
 
@@ -35,6 +35,7 @@ spring.jpa:
 spring.jpa.hibernate:
   # Hibernate ddl auto (validate, create, create-drop, update)
   ddl-auto: validate
+  #ddl-auto: create
 
   # Naming strategy
   naming-strategy: org.hibernate.cfg.ImprovedNamingStrategy
