--- a/src/main/resources/application-production.yml
+++ b/src/main/resources/application-production.yml
@@ -4,18 +4,11 @@ spring:
   profiles: production
 
 server:
-  port: 80  # Will probably be ignored when deployed in Tomcat
+  port: 9001 # Will probably be ignored when deployed in Tomcat
 
 logging.level:
   ROOT: ERROR
   se.leafcoders.rosette: ERROR
-
-multipart:
-  max-file-size: 200MB
-  max-request-size: 200MB
-
-security:
-  basic.enabled: false
 
 spring.mail:
   testConnection: true
@@ -30,9 +23,6 @@ spring.mail:
     # mail.smtp.socketFactory.port:
 
 rosette:
-  baseUrl: http://localhost
-  apiVersion: v1
+  baseUrl: http://localhost:9001
   jwtSecretToken: tooShort # Don't change this. Override this property in production with environment variable
-  defaultMailFrom: no-reply@localhost
-  filesPath: ./rosetteFiles
   fileClientCacheMaxAge: 604800 # One week
