--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,53 @@
 spring.profiles:
   active: development # If spring.profile.active is not specified, profile will be "development"
 
-spring.jackson:
-  serialization.WRITE_DATES_AS_TIMESTAMPS: false
+server:
+  port: 9000
+
+security:
+  basic.enabled: false
 
 spring.http.multipart:
   max-file-size: 200MB
   max-request-size: 200MB
+
+spring.datasource:
+  url: jdbc:mysql://localhost:3306/test
+  username: root
+  password: root
+  tomcat:
+    testWhileIdle: true # Keep the connection alive if idle for a long time (needed in production)
+    validationQuery: SELECT 1
+
+spring.jpa:
+  hibernate:
+    ddl-auto: none # Hibernate ddl auto (none, validate, create, create-drop, update)
+    naming.strategy: org.hibernate.cfg.ImprovedNamingStrategy # Naming strategy
+  properties:
+    hibernate.dialect: org.hibernate.dialect.MySQL5Dialect # The SQL dialect makes Hibernate generate better SQL for the chosen database
+
+spring.jackson:
+  serialization:
+    WRITE_DATES_AS_TIMESTAMPS: false
+
+spring.mail:
+  protocol: smtp
+  host: localhost
+  port: 1234
+  # username: 
+  # password: 
+  properties:
+    mail.smtp.auth: false
+    mail.smtp.starttls.enable: false
+    # mail.smtp.socketFactory.port:
+
+flyway:
+  enabled: true
+
+rosette:
+  baseUrl: http://localhost:9000
+  apiVersion: v1
+  jwtSecretToken: developmentSimpleJwtSecretToken
+  defaultMailFrom: no-reply@localhost
+  filesPath: ./rosetteFiles
+  fileClientCacheMaxAge: 0
