--- a/build.gradle
+++ b/build.gradle
@@ -7,15 +7,25 @@ buildscript {
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+		classpath('se.transmode.gradle:gradle-docker:1.2')
 	}
 }
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
+plugins {
+	id 'java'
+	id 'eclipse'
+}
 
+apply plugin: 'org.springframework.boot'
+apply plugin: 'docker'
+
+
+group = 'se.leafcoders'
 version = '0.0.1-SNAPSHOT'
+
+
 sourceCompatibility = 1.8
+// targetCompatibility = 1.8
 
 repositories {
 	mavenCentral()
@@ -28,7 +38,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-security')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	runtime('org.springframework.boot:spring-boot-devtools')
-	runtime('mysql:mysql-connector-java')
+	runtime('mysql:mysql-connector-java:6.0.6')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.springframework.security:spring-security-test')
 
@@ -45,4 +55,17 @@ dependencies {
   
     // MP3 audio support
     compile("com.googlecode.soundlibs:mp3spi:1.9.5-1")
+}
+
+
+task buildDocker(type: Docker, dependsOn: 'bootRepackage') {
+    baseImage = 'java:8'
+    push = project.hasProperty('push')
+    tag = 'leafcoders/rosette'
+    addFile {
+        from jar
+        rename { 'rosette.jar' }
+    }
+    volume('/tmp')
+    entryPoint(['java', '-Djava.security.egd=file:/dev/./urandom', '-Dspring.profiles.active=production', '-jar', '/rosette.jar'])
 }
