--- a/setup/docker/docker-compose.yml
+++ b/setup/docker/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - mysql-data:/var/lib/mysql
 
   rosette-server:
-    build: .
+    build: ../..
 #    image: leafcoders/rosette
     depends_on:
       - mysql-database
@@ -33,11 +33,23 @@ services:
       - MAIL_PASSWORD=
       - MAIL_SMTP_AUTH=false
       - MAIL_SMTP_STARTTLS=false
-      - ROSETTE_JWTSECRET="sdf#4sdkF8(ksdo/%lksdfmmwpkdEWh)#jh2DF"
-      - ROSETTE_URL=http://localhost:9001
+      - ROSETTE_JWTSECRET=${ROSETTE_JWTSECRET:?Must specify ROSETTE_JWTSECRET in environment}
+      - ROSETTE_URL=${ROSETTE_URL:?Must specify ROSETTE_URL in environment}
       - ROSETTE_FILES=/var/lib/rosette
     volumes:
       - rosette-files:/var/lib/rosette
+
+  cordate-client:
+    image: leafcoders/cordate:1.1
+    depends_on:
+      - rosette-server
+    restart: always
+    ports:
+      - 80:80
+    environment:
+      - ROSETTE_URL=${ROSETTE_URL:?Must specify ROSETTE_URL in environment}
+      - APPLICATION_NAME=${CORDATE_APPNAME:?Must specify CORDATE_APPNAME in environment}
+    command: /bin/bash -c "envsubst '$$ROSETTE_URL $$APPLICATION_NAME' < /etc/nginx/conf.d/cordate_conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
 
 volumes:
   mysql-data:
