--- a/setup/docker/docker-compose.yml
+++ b/setup/docker/docker-compose.yml
@@ -36,6 +36,7 @@ services:
       - ROSETTE_JWTSECRET=${ROSETTE_JWTSECRET:?Must specify ROSETTE_JWTSECRET in environment}
       - ROSETTE_URL=${ROSETTE_URL:?Must specify ROSETTE_URL in environment}
       - ROSETTE_FILES=/var/lib/rosette
+      - CORDATE_URL=${CORDATE_URL:?Must specify CORDATE_URL in environment}
     volumes:
       - rosette-files:/var/lib/rosette
 
