--- a/setup/docker/docker-compose.yml
+++ b/setup/docker/docker-compose.yml
@@ -21,10 +21,10 @@ services:
     ports:
       - 9001:9000
     environment:
-      #- PORT=9000
       - DATABASE_HOST=mysql-database
       - DATABASE_PORT=3306
       - DATABASE_NAME=rosette-db
+      - DATABASE_USE_SSL=false
       - DATABASE_USERNAME=dbuser
       - DATABASE_PASSWORD=dbpassword
       - MAIL_HOST=
@@ -33,10 +33,15 @@ services:
       - MAIL_PASSWORD=
       - MAIL_SMTP_AUTH=false
       - MAIL_SMTP_STARTTLS=false
-      - ROSETTE_JWTSECRET=${ROSETTE_JWTSECRET:?Must specify ROSETTE_JWTSECRET in environment}
-      - ROSETTE_URL=${ROSETTE_URL:?Must specify ROSETTE_URL in environment}
-      - ROSETTE_FILES=/var/lib/rosette
-      - CORDATE_URL=${CORDATE_URL:?Must specify CORDATE_URL in environment}
+      - MAIL_SMTP_SSL_TRUST=
+      - MAIL_TEST_CONNECTION=true # Assert mail connectivity at startup
+      - MAIL_DEBUG=false
+      - ROSETTE_JWTSECRET=${ROSETTE_JWTSECRET:?Must specify ROSETTE_JWTSECRET in environment} # Must at least be 10 chars
+      - ROSETTE_FILES_FOLDER=/var/lib/rosette # Local folder where the application may store files in
+      - ROSETTE_DEFAULT_MAIL_FROM= # Default mail from address
+      - ROSETTE_ADMIN_MAIL_TO= # Mail address to administrator
+      - ROSETTE_URL=${ROSETTE_URL:?Must specify ROSETTE_URL in environment} # Public url to rosette server
+      - CORDATE_URL=${CORDATE_URL:?Must specify CORDATE_URL in environment} # Public url to cordate client    
     volumes:
       - rosette-files:/var/lib/rosette
 
