Validate urls in settings. To prevent double / in paths.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -96,8 +96,8 @@ rosette:
   adminMailTo: admin@localhost
   filesPath: ./rosetteFiles
   fileClientCacheMaxAge: 0
-  baseUrl: http://localhost:9000
-  cordateUrl: http://localhost:4200
+  baseUrl: http://localhost:9000/
+  cordateUrl: http://localhost:4200/
 
 
 ---
