--- a/build.gradle
+++ b/build.gradle
@@ -1,68 +1,53 @@
-buildscript {
-	ext {
-		springBootVersion = '2.0.4.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
-}
-
 plugins {
-	id 'java'
-	id 'eclipse'
+  id "org.springframework.boot" version "2.2.6.RELEASE"
+  id "io.spring.dependency-management" version "1.0.9.RELEASE"
+  id "java"
 }
 
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
+group = "se.leafcoders"
+sourceCompatibility = JavaVersion.VERSION_14
+targetCompatibility = JavaVersion.VERSION_14
 
 bootJar {
-    baseName = 'rosette'
-    version =  '0.19-SNAPSHOT'
+  archiveBaseName = "rosette"
+  archiveVersion =  "0.19-SNAPSHOT"
 }
 
-group = 'se.leafcoders'
-
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
 repositories {
-	mavenCentral()
+  mavenCentral()
 }
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	compile('org.springframework.boot:spring-boot-starter-mail')
-	compile('org.springframework.boot:spring-boot-starter-security')
-	compile('org.springframework.boot:spring-boot-starter-web')
-	compile('org.springframework.boot:spring-boot-starter-websocket')
-	compile('org.springframework.security:spring-security-messaging')
-	runtime('org.springframework.boot:spring-boot-devtools')
-	runtime('mysql:mysql-connector-java')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
-	testCompile('org.springframework.security:spring-security-test')
-	testCompile('org.mockito:mockito-core:2.11.0')
+  implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+  implementation("org.springframework.boot:spring-boot-starter-mail")
+  implementation("org.springframework.boot:spring-boot-starter-security")
+  implementation("org.springframework.boot:spring-boot-starter-web")
+  implementation("org.springframework.boot:spring-boot-starter-websocket")
+  implementation("org.springframework.security:spring-security-messaging")
+  runtimeOnly("org.springframework.boot:spring-boot-devtools")
+  runtimeOnly("mysql:mysql-connector-java")
+  testImplementation("org.springframework.boot:spring-boot-starter-test")
+  testImplementation("org.springframework.security:spring-security-test")
+  testImplementation("org.mockito:mockito-core:2.11.0")
 
-	// Database migration
-	compile('org.flywaydb:flyway-core')
-	
-	compile("io.jsonwebtoken:jjwt:0.4")
+  // Database migration
+  implementation("org.flywaydb:flyway-core")
 
-	// For ical feed
-	compile("net.sf.biweekly:biweekly:0.6.2")
+  implementation("io.jsonwebtoken:jjwt:0.4")
 
-	// Google common libraries
-	compile("com.google.guava:guava:21.0")
-	
-    // Thumbnailator
-    compile("net.coobird:thumbnailator:0.4.8")
-  
-    // MP3 audio support
-    compile("com.googlecode.soundlibs:mp3spi:1.9.5-1")
+  // For ical feed
+  implementation("net.sf.biweekly:biweekly:0.6.2")
+
+  // Google common libraries
+  implementation("com.google.guava:guava:21.0")
+
+  // Thumbnailator
+  implementation("net.coobird:thumbnailator:0.4.8")
+
+  // MP3 audio support
+  implementation("com.googlecode.soundlibs:mp3spi:1.9.5.4")
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.10'
+wrapper {
+  gradleVersion = "6.3"
 }
