--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,12 @@ dependencies {
   testImplementation("org.springframework.security:spring-security-test")
   testImplementation("org.mockito:mockito-core:2.11.0")
 
+  // Lombok
+  compileOnly("org.projectlombok:lombok:1.18.12")
+  annotationProcessor("org.projectlombok:lombok:1.18.12")
+  testCompileOnly("org.projectlombok:lombok:1.18.12")
+  testAnnotationProcessor("org.projectlombok:lombok:1.18.12")
+
   // Database migration
   implementation("org.flywaydb:flyway-core")
 
