--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,8 @@
 # https://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
 
+info:
+  app.version: "@project.version@"
+
 spring.profiles:
   active: development # If spring.profile.active is not specified, profile will be "development"
 
