Enable color coded logs at development

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -122,7 +122,8 @@ rosette:
 spring:
   profiles: development
 
-logging.file: 'logfile.log'
+spring.output.ansi.enabled: ALWAYS # Enablecolor log output
+logging.file: "logfile.log"
 
 logging.level:
   org.springframework.web.filter.CommonsRequestLoggingFilter: DEBUG
